tests/models/enum/unnamed/f64/pass/le.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(le = 2.0)]
        f64
    ),
}
fn main() {}
