tests/models/enum/unnamed/f64/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value(
       #[field(validate = validate_fn)]
        f64
    ),
}
fn main() {}
